RESOLVED FIXED236469
[WebAuthn] Access group not set in add query for importLocalAuthenticatorCredential
https://bugs.webkit.org/show_bug.cgi?id=236469
Summary [WebAuthn] Access group not set in add query for importLocalAuthenticatorCred...
pascoe@apple.com
Reported 2022-02-10 15:59:15 PST
^
Attachments
Patch (7.13 KB, patch)
2022-02-11 08:49 PST, pascoe@apple.com
no flags
Patch for landing (7.11 KB, patch)
2022-02-14 08:33 PST, pascoe@apple.com
no flags
Radar WebKit Bug Importer
Comment 1 2022-02-10 15:59:25 PST
pascoe@apple.com
Comment 2 2022-02-11 08:49:04 PST
Brent Fulgham
Comment 3 2022-02-11 10:55:16 PST
Comment on attachment 451702 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=451702&action=review r=me > Source/WebKit/ChangeLog:9 > + In the patch adding support for setting accessGroup, previously did not properly set Suggestion: In Bug 236311 we added support setting accessGroup, but did not properly set it on the addQuery. This patch fixes that. > Tools/ChangeLog:14 > + * TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm: Really nice that you managed to create a test to protect this behavior!
pascoe@apple.com
Comment 4 2022-02-14 08:33:30 PST
Created attachment 451905 [details] Patch for landing
EWS
Comment 5 2022-02-14 13:12:03 PST
Committed r289760 (247232@main): <https://commits.webkit.org/247232@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 451905 [details].
Note You need to log in before you can comment on or make changes to this bug.