[WebAuthn] Access group not set in add query for importLocalAuthenticatorCredential https://bugs.webkit.org/show_bug.cgi?id=236469 rdar://problem/88783447

Reviewed by Brent Fulgham.

Source/WebKit:

In Bug 236311 we added support setting accessGroup, but did not properly set it
on the addQuery. This patch fixes that.

Updated API test to use non-standard accessGroup.

* UIProcess/API/Cocoa/_WKWebAuthenticationPanel.mm:
(+[_WKWebAuthenticationPanel importLocalAuthenticatorWithAccessGroup:credential:error:]):

Tools:

Updated API test to use non-standard access group.

* TestWebKitAPI/Configurations/TestWebKitAPI-iOS.entitlements:
* TestWebKitAPI/Configurations/TestWebKitAPI-macOS-internal.entitlements:
* TestWebKitAPI/Configurations/TestWebKitAPI-macOS.entitlements:
* TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm:
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/247232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289760 268f45cc-cd09-0410-ab3c-d52691b4dbfc